--- a/01/index.html
+++ b/01/index.html
@@ -4,6 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        p {
+            background-color: violet;
+        }
+    </style>
     <title>CSSs tutorial</title>
 </head>
 
