add external css

--- a/01/index.html
+++ b/01/index.html
@@ -9,6 +9,7 @@
             background-color: violet;
         }
     </style>
+    <link rel="stylesheet" href="./index.css">
     <title>CSSs tutorial</title>
 </head>
 
