add css class selectors

--- a/02/index.html
+++ b/02/index.html
@@ -9,12 +9,20 @@
         p {
             color: red;
         }
+
+        .selectors {
+            color: blue;
+        }
     </style>
 </head>
 
 <body>
-    <h3>CSS Selectors</h3>
+    <h3 class="selectors">CSS Selectors</h3>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.nobis explicabo dignissimos impedit voluptatem.</p>
+    <p id="secondPara">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor adipisci cupiditate accusamus
+        dolorem molestias,
+        nostrum provident porro eos ad. Obcaecati veniam beatae placeat incidunt? Labore recusandae corrupti odit
+        dolorem laudantium!</p>
 </body>
 
 </html>
