add css id selectors

--- a/02/index.html
+++ b/02/index.html
@@ -13,6 +13,11 @@
         .selectors {
             color: blue;
         }
+
+        #secondPara {
+            color: green;
+
+        }
     </style>
 </head>
 
