--- a/04/index.html
+++ b/04/index.html
@@ -8,6 +8,7 @@
     <style>
         p {
             font-family: cursive;
+            font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
         }
     </style>
 </head>
