add border example

--- a/05/index.html
+++ b/05/index.html
@@ -8,10 +8,12 @@
     <style>
         #firstColor {
             color: blue;
+            background-color: antiquewhite;
         }
 
         #secondColor {
             color: #e1e1e1;
+            background-color: aqua;
         }
     </style>
 </head>
