--- a/06/index.html
+++ b/06/index.html
@@ -15,6 +15,20 @@
             border-color: green;
             border: 4px solid yellow;
          }
+
+         #secondPara{
+            background-color: red;
+            height: 100px;
+            width: 450px;
+            border-width: 4px;
+            border-style: solid;
+            border-color: green;
+            border: 4px solid yellow;
+            border-top-left-radius: 4px;
+            border-top-right-radius: 4px;
+            border-bottom-left-radius: 4px ;
+            border-bottom-right-radius: 4px;
+         }
     </style>
 </head>
 
@@ -22,6 +36,7 @@
     <p id="firstPara">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cumque ipsa sunt similique perferendis
         impedit nesciunt veritatis dolores eius natus. Repellat quis quaerat reprehenderit eos quod. Quaerat facilis
         quasi qui inventore!</p>
+        <p id="secondPara">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas nulla repellendus rerum consequuntur corrupti perspiciatis? Nulla quisquam eveniet ex explicabo dicta! Placeat pariatur odit sit dolorum explicabo expedita culpa minus?</p>
 </body>
 
 </html>
