add padding-left example

--- a/07/index.html
+++ b/07/index.html
@@ -26,6 +26,8 @@
             margin: 14px 19px;
             border-radius: 23px;
             width: 533px;
+            padding-left: 10px;
+            
 
 
 
