--- a/07/index.html
+++ b/07/index.html
@@ -27,7 +27,7 @@
             border-radius: 23px;
             width: 533px;
             padding-left: 10px;
-            
+            padding-right: 10px;
 
 
 
