--- a/07/index.html
+++ b/07/index.html
@@ -28,6 +28,7 @@
             width: 533px;
             padding-left: 10px;
             padding-right: 10px;
+            padding-top: 10px;
 
 
 
