--- a/07/index.html
+++ b/07/index.html
@@ -29,6 +29,7 @@
             padding-left: 10px;
             padding-right: 10px;
             padding-top: 10px;
+            padding-bottom: 10px;
 
 
 
