--- a/07/index.html
+++ b/07/index.html
@@ -30,6 +30,7 @@
             padding-right: 10px;
             padding-top: 10px;
             padding-bottom: 10px;
+            padding: 10px 10px 10px 10px;
 
 
 
