--- a/07/index.html
+++ b/07/index.html
@@ -30,7 +30,9 @@
             padding-right: 10px;
             padding-top: 10px;
             padding-bottom: 10px;
-            padding: 10px 10px 10px 10px;
+            padding: 50px 10px 10px 10px;
+            width: 233px;
+            box-sizing: border-box;
 
 
 
