--- a/08/index.html
+++ b/08/index.html
@@ -13,7 +13,9 @@
             border: 3px solid purple;
             margin: auto;
         }
-
+body{
+    font-family: sans-serif;
+}
         .item {
             border: 3px solid grey;
             margin: 12px 3px;
