add float example

--- a/08/index.html
+++ b/08/index.html
@@ -21,6 +21,21 @@ body{
             margin: 12px 3px;
             padding: 12px 3px;
         }
+
+        #fruits{
+float: left;
+width: 50%;
+        }
+
+        #computer{
+float: left;
+width: 50%;
+        }
+
+        #stationary{
+float: right;
+width: 50%;
+        }
     </style>
 </head>
 
