--- a/08/index.html
+++ b/08/index.html
@@ -6,12 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aignment</title>
     <style>
-        * {}
+        * {
+            box-sizing: border-box;
+        }
 
         .container {
-            width: 900px;
+            width: 1100px;
             border: 3px solid purple;
             margin: auto;
+            height: 500px;
         }
 body{
     font-family: sans-serif;
@@ -33,8 +36,9 @@ width: 50%;
         }
 
         #stationary{
-float: right;
-width: 50%;
+/* float: left; */
+clear: left;
+width: 100%;
         }
     </style>
 </head>
