add text-align example

--- a/08/index.html
+++ b/08/index.html
@@ -40,6 +40,11 @@ width: 50%;
 clear: left;
 width: 100%;
         }
+
+        p{
+            text-align: right;
+            text-align: center;
+        }
     </style>
 </head>
 
