add bg-color example

--- a/08/index.html
+++ b/08/index.html
@@ -15,6 +15,7 @@
             border: 3px solid purple;
             margin: auto;
             height: 500px;
+            background-color: bisque;
         }
 body{
     font-family: sans-serif;
