add style to navbar search

--- a/10/index.html
+++ b/10/index.html
@@ -45,6 +45,15 @@
 
         }
 
+        .search{
+            /* float: right; */
+            color: white;
+            display: flex;
+            justify-content: flex-end;
+            border-radius: 2px;
+            padding: 12px 75px;
+        }
+
      
         /* .navbar .search{
             display: flex;
