--- a/11/index.html
+++ b/11/index.html
@@ -1,36 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS display property</title>
     <style>
-        img{
+        img {
             width: 34px;
             margin: auto;
             display: block;
         }
 
-        h3{
+        h3 {
             font-family: sans-serif;
-            margin:  0px;
+            margin: 0px;
             text-align: center;
         }
 
-        header{
+        header {
             margin: auto;
             display: inline;
 
             border: 2px solid red;
-            /* width: 15%; */
+            width: 1100px;
+        }
+
+        .box{
+            border: 4px solid black;
+            background-color: grey;
+            padding: 20px;
+            margin: auto;
+            display: inline-block;
+            width: 30%;
         }
     </style>
 </head>
+
 <body>
     <header class="top">
         <img src="./2.jpg" alt="">
         <h3>Welcome to Chinmay's Blog</h3>
     </header>
 
+    <div class="container">
+        <div class="box">
+            <h4 class="heading">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam tempora, mollitia dignissimos
+                    aperiam quibusdam inventore sit deleniti fugiat asperiores error a, sunt amet! Laboriosam molestiae
+                    veritatis quis exercitationem ipsum culpa vel quo. Quisquam, voluptate?</p>
+            </h4>
+        </div>
+
+        <div class="box">
+            <h4 class="heading">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam tempora, mollitia dignissimos
+                    aperiam quibusdam inventore sit deleniti fugiat asperiores error a, sunt amet! Laboriosam molestiae
+                    veritatis quis exercitationem ipsum culpa vel quo. Quisquam, voluptate?</p>
+            </h4>
+        </div>
+
+        <div class="box">
+            <h4 class="heading">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam tempora, mollitia dignissimos
+                    aperiam quibusdam inventore sit deleniti fugiat asperiores error a, sunt amet! Laboriosam molestiae
+                    veritatis quis exercitationem ipsum culpa vel quo. Quisquam, voluptate?</p>
+            </h4>
+        </div>
+    </div>
+
 </body>
+
 </html>
