--- a/13/index.html
+++ b/13/index.html
@@ -11,6 +11,7 @@
 
             border: 2px solid black;
             background-color: antiquewhite;
+            height: 2222px;
         }
         .box {
             display: inline-block;
@@ -21,8 +22,9 @@
 
         #box3 {
             position: absolute;
-            top: 34px;
-            left: 134px;
+            /* top: 34px;
+            left: 134px; */
+            position: fixed;
         }
     </style>
 
