add style to mid right and left

--- a/13/index.html
+++ b/13/index.html
@@ -21,10 +21,12 @@
         }
 
         #box3 {
-            position: absolute;
+            /* position: absolute;
             /* top: 34px;
             left: 134px; */
-            position: fixed;
+            /* position: fixed; */ */
+
+            
         }
     </style>
 
