--- a/12/index.html
+++ b/12/index.html
@@ -7,40 +7,97 @@
     <title>Chinmay fitness</title>
 </head>
 <link rel="stylesheet" href="./style.css">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans&family=Krub&display=swap" rel="stylesheet">
 <style>
     body {
         margin: 0px;
         padding: 0px;
         background: url(./img/gym.jpg);
         color: white;
+        font-family: 'Balsamiq Sans', sans-serif;
+        /* font-family: 'Krub', sans-serif; */
     }
 
     .left {
-        border: 2px solid red;
+        display: inline-block;
+        /* margin-left:  18px;
+        margin-top: 18px; */
+        position: absolute;
+        top: 18px;
+        left: 18px;
+        text-align: center;
+    }
+
+    .left div {
+
+        /* line-height: 20px; */
+        /* font-size: 26px; */
+    }
+
+    .left img {
+        width: 120px;
+        /* filter: invert(100%); */
     }
 
     .right {
-        border: 2px solid green;
+        position: absolute;
+        right: 34px;
+        top: 22px;
 
     }
 
     .mid {
-        border: 2px solid yellow;
-
+        display: block;
+        width: 53%;
+        margin: 20px auto;
+        text-align: center;
     }
+
+   
 </style>
 
 <body>
     <header class="header">
         <div class="left">
-i am left
+
+            <div class="left">
+                <img src="./img/logo.jpg" alt="">
+                <div>Marry Fitness</div>
+            </div>
         </div>
 
         <div class="mid">
-i am mid
+            <ul class="navbar">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Fitness Center</a></li>
+                <li><a href="#">Contact Us</a></li>
+            </ul>
         </div>
         <div class="right">
-i am right
+            <button class="btn">Call Us Now</button>
+            <button class="btn">Email Us</button>
+        </div>
+
+        <div class="container">
+            <h1>Join the best Gym of Bengaluru now</h1>
+            <form action="nonaction.php">
+                <div class="form-group">
+                    <input type="text" name="" placeholder="Enter your name">
+                </div>
+                <div class="form-group">
+                    <input type="text" name="" placeholder="Enter your age">
+                </div>
+                <div class="form-group">
+                    <input type="text" name="" placeholder="Enter your gender">
+                </div>
+                <div class="form-group">
+                    <input type="text" name="" placeholder="Enter your locality">
+                </div>
+                <button class="btn">Submit</button>
+            </form>
         </div>
     </header>
 </body>
