add style to navbar

--- a/12/index.html
+++ b/12/index.html
@@ -55,7 +55,23 @@
         text-align: center;
     }
 
-   
+    .navbar {
+        display: inline-block;
+    }
+
+    .navbar li {
+        display: inline-block;
+        font-size: 25px;
+    }
+
+    .navbar li a {
+        /* display: inline-block; */
+        color: white;
+        text-decoration: none;
+        padding: 10px;
+    }
+
+    
 </style>
 
 <body>
