--- a/12/index.html
+++ b/12/index.html
@@ -71,7 +71,12 @@
         padding: 10px;
     }
 
-    
+    .navbar li a:hover,
+    .navbar li a.active {
+        text-decoration: underline;
+        color: grey;
+    }
+
 </style>
 
 <body>
