add style to button

--- a/12/index.html
+++ b/12/index.html
@@ -77,6 +77,18 @@
         color: grey;
     }
 
+    .btn {
+        margin: 0px 9px;
+        background-color: black;
+        color: white;
+        padding: 4px 14px;
+        border: 2px solid grey;
+        border-radius: 10px;
+        font-size: 15px;
+        cursor: pointer;
+    }
+
+   
 </style>
 
 <body>
