add style to conatiner

--- a/12/index.html
+++ b/12/index.html
@@ -92,7 +92,16 @@
         background-color: rgb(19, 18, 18);
     }
 
-   
+    .container {
+        border: 2px solid green;
+        margin: 80px 40px;
+        padding: 75px 20px;
+        width: 43%;
+        border-radius: 20px;
+        border-color: white;
+    }
+
+    
 </style>
 
 <body>
