--- a/12/index.html
+++ b/12/index.html
@@ -101,7 +101,27 @@
         border-color: white;
     }
 
-    
+    .form-group input {
+        text-align: center;
+        display: block;
+        padding: 1px;
+        width: 400px;
+        font-size: 20px;
+        border-radius: 10px;
+        font-family: 'Balsamiq Sans', sans-serif;
+        border: 2px solid black;
+        margin: 11px auto;
+    }
+
+    .container h1 {
+        text-align: center;
+    }
+
+    .container button {
+        display: block;
+        width: 74%;
+        margin:20px auto;
+    }
 </style>
 
 <body>
