--- a/14/index.html
+++ b/14/index.html
@@ -18,7 +18,8 @@
         }
 
         #box2 {
-            visibility: hidden;
+            /* visibility: hidden; */
+            display: none;
             background-color: blue;
         }
 
