add z-index property

--- a/14/index.html
+++ b/14/index.html
@@ -14,16 +14,23 @@
         }
 
         #box1 {
+            position: relative;
+            z-index: -1;
+            top: 900px;
             background-color: red;
         }
 
         #box2 {
             /* visibility: hidden; */
-            display: none;
+            /* display: none; */
+            position: relative;
+            top: 800px;
+            z-index: -16;
             background-color: blue;
         }
 
         #box3 {
+
             background-color: green;
         }
 
