--- a/15/index.html
+++ b/15/index.html
@@ -11,8 +11,8 @@
             width: 100%;
             border: 2px solid black;
             display: flex;
-            /* flex-wrap: wrap; */
-            /* flex-direction: column; */
+            flex-wrap: wrap; 
+        flex-direction: column;
         }
         .item{
             background-color: tomato;
