--- a/15/index.html
+++ b/15/index.html
@@ -13,6 +13,7 @@
             display: flex;
             flex-wrap: wrap; 
         flex-direction: column;
+        flex-flow: row-reverse wrap;
         }
         .item{
             background-color: tomato;
