add justify content

--- a/15/index.html
+++ b/15/index.html
@@ -12,8 +12,9 @@
             border: 2px solid black;
             display: flex;
             flex-wrap: wrap; 
-        flex-direction: column;
-        flex-flow: row-reverse wrap;
+        /* flex-direction: column; */
+        justify-content: center;
+      
         }
         .item{
             background-color: tomato;
