--- a/15/index.html
+++ b/15/index.html
@@ -14,6 +14,7 @@
             flex-wrap: wrap; 
         /* flex-direction: column; */
         justify-content: center;
+        justify-content: space-between;
       
         }
         .item{
