--- a/15/index.html
+++ b/15/index.html
@@ -15,6 +15,7 @@
         /* flex-direction: column; */
         justify-content: center;
         justify-content: space-between;
+        justify-content: space-around;
       
         }
         .item{
