add align items

--- a/15/index.html
+++ b/15/index.html
@@ -11,13 +11,13 @@
             width: 100%;
             border: 2px solid black;
             display: flex;
-            flex-wrap: wrap; 
+            /* flex-wrap: wrap; 
         /* flex-direction: column; */
-        justify-content: center;
+        /* justify-content: center;
         justify-content: space-between;
         justify-content: space-around;
-        justify-content: space-evenly;
-      
+        justify-content: space-evenly; */
+       align-items: center;
         }
         .item{
             background-color: tomato;
