add fontsize with rem

--- a/16/index.html
+++ b/16/index.html
@@ -15,6 +15,10 @@
         #first{
             font-size: 3em;
         }
+        #second{
+            font-size: 3rem;
+            padding: 3rem;
+        }
     </style>
 </head>
 <body>
