--- a/17/index.html
+++ b/17/index.html
@@ -18,6 +18,12 @@
 display: block;
             }
         }
+
+        @media (max-width:500px) and (min-width:300px){
+            #box2{
+                display: block;
+            }
+        }
     </style>
 </head>
 <body>
