--- a/17/index.html
+++ b/17/index.html
@@ -24,12 +24,19 @@ display: block;
                 display: block;
             }
         }
+
+        @media (max-width:800px) and (min-width:500px){
+            #box3{
+                display: block;
+                background-color: aqua;
+            }
+        }
     </style>
 </head>
 <body>
-    <div class="box" id="box1">Hey How are you ?</div>
-    <div class="box" id="box2">Hey How are you ?</div>
-    <div class="box" id="box3">Hey How are you ?</div>
+    <div class="box" id="box1">Hey  ?</div>
+    <div class="box" id="box2">Hey How  ?</div>
+    <div class="box" id="box3">Hey How are  ?</div>
     <div class="box" id="box4">Hey How are you ?</div>
 </body>
 </html>
