add media query to box4

--- a/17/index.html
+++ b/17/index.html
@@ -31,6 +31,14 @@ display: block;
                 background-color: aqua;
             }
         }
+
+        @media (min-width:800px){
+            #box4{
+                display: block;
+                background-color: green;
+
+            }
+        }
     </style>
 </head>
 <body>
