--- a/18/index.html
+++ b/18/index.html
@@ -10,9 +10,29 @@
             color: black;
             font-weight: bold;
         }
+
+        div p{
+            color: yellow;
+            background-color: green;
+            font-weight: bold;
+        }
+
+        div li p{
+            color:gray ;
+        }
     </style>
 </head>
 <body>
     <h1>This is more on selectors</h1>
+    <div class="container">
+        <div class="row">
+            <ul>
+                <li class="item"><p>This is paragraph</p></li>
+            </ul>
+            
+        </div>
+        <p>This is another paragraph</p>
+    </div>
+    <p>Outermost paragraph</p>
 </body>
 </html>
