add example on selector for previous div

--- a/18/index.html
+++ b/18/index.html
@@ -20,6 +20,10 @@
         div li p{
             color:gray ;
         }
+
+        div + p{
+            background-color: antiquewhite;
+        }
     </style>
 </head>
 <body>
