--- a/18/index.html
+++ b/18/index.html
@@ -24,6 +24,10 @@
         div + p{
             background-color: antiquewhite;
         }
+        div > p{
+            background-color: aqua;
+            color: blue;
+        }
     </style>
 </head>
 <body>
