--- a/19/index.html
+++ b/19/index.html
@@ -21,12 +21,25 @@
             padding: 23px;
             border: 2px solid red;
         }
+
+        a[target]{
+color: antiquewhite;
+text-decoration: none;
+        }
+
+        a[target = '_self']{
+color: aquamarine;
+text-decoration: none;
+
+        }
     </style>
 </head>
 
 <body>
     <div class="container">
         <form action="" class="form-control">
+           <h1> <a href="https://google.com" target="_blank">Go to Google</a></h1>
+           <h1><a href="https://facebook.com" target="_self">Go to Facebook</a></h1>
             <input type="text" placeholder="Enter your name">
             <input type="password" placeholder="Enter your Password">
             <input type="submit" value="Submit">
