add style to nth child attribute

--- a/19/index.html
+++ b/19/index.html
@@ -30,7 +30,10 @@ text-decoration: none;
         a[target = '_self']{
 color: aquamarine;
 text-decoration: none;
+        }
 
+        li:nth-child(3){
+            color: aqua;
         }
     </style>
 </head>
