add before to section

--- a/20/index.html
+++ b/20/index.html
@@ -25,11 +25,17 @@
             padding: 34px 23px;
             display: flex;
             flex-direction: column;
+            align-items: center;
+            border: 2px solid red;
         }
 
         .navigation{
 
             display: flex;
+        }
+
+        section::before{
+            content: 'this is a content';
         }
     </style>
 </head>
