--- a/20/index.html
+++ b/20/index.html
@@ -9,8 +9,19 @@
         body {
             background-color: black;
             color: white;
-        }
 
+        }
+header::before{
+    background-image: url(./img/img.jpg);
+content: "";
+position: absolute;
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+z-index: -1;
+opacity: 0.5;
+}
         header {
             display: flex;
             flex-direction: column;
@@ -26,15 +37,16 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            border: 2px solid red;
+            /* border: 2px solid red; */
+            justify-content: center;
         }
 
-        .navigation{
+        .navigation {
 
             display: flex;
         }
 
-        section::before{
+        section::before {
             content: 'this is a content';
         }
     </style>
@@ -57,6 +69,7 @@
                 voluptatibus labore quam aliquid, iure eum deserunt at laborum.</p>
         </section>
     </header>
+    <hr>
 </body>
 
 </html>
