--- a/21/index.html
+++ b/21/index.html
@@ -12,6 +12,8 @@
             margin: 23px 10px;
             background-color: beige;
             box-shadow: 10px 13px green;
+            box-shadow: 10px -13px green;
+
         }
 
         .container {
