add example to text shadow

--- a/21/index.html
+++ b/21/index.html
@@ -16,6 +16,11 @@
 
         }
 
+      .card  h2 {
+            box-shadow: 2px 1px goldenrod;
+            text-shadow: 4px 3px red;
+        }
+
         .container {
             display: flex;
         }
