--- a/22/index.html
+++ b/22/index.html
@@ -8,6 +8,7 @@
     <style>
         :root {
             --primary-color: violet;
+            --secondary-color:red;
 
         }
 
@@ -15,7 +16,7 @@
             width: 200px;
             height: 200px;
             background-color: var(--box-color);
-            border: 2px solid red;
+            border: 2px solid :var(--secondary-color);
             margin: 2px 9px;
             box-shadow: 3px 3px blue;
         }
