--- a/22/index.html
+++ b/22/index.html
@@ -15,8 +15,8 @@
         .box {
             width: 200px;
             height: 200px;
-            background-color: var(--box-color);
-            border: 2px solid :var(--secondary-color);
+            background-color: var(--primary-color);
+            border: 2px solid var(--secondary-color);
             margin: 2px 9px;
             box-shadow: 3px 3px blue;
         }
@@ -24,6 +24,9 @@
         .container {
             display: flex;
             background-color: var(--box-color);
+            margin: auto;
+            display: flex;
+            justify-content: center;
         }
     </style>
 </head>
