add animation duration

--- a/23/index.html
+++ b/23/index.html
@@ -16,6 +16,7 @@
             height: 250px;
             position: relative;
             animation-name: Chinamy;
+            animation-duration: 2s;
         }
     </style>
 </head>
