--- a/23/index.html
+++ b/23/index.html
@@ -15,8 +15,18 @@
             width: 250px;
             height: 250px;
             position: relative;
-            animation-name: Chinamy;
+            animation-name: Chinmay;
             animation-duration: 2s;
+            animation-iteration-count: 3;
+        }
+
+        @keyframes Chinmay {
+            from{
+                width: 200px;
+            }
+            to{
+                width: 400px;
+            }
         }
     </style>
 </head>
