add transition property

--- a/23/index.html
+++ b/23/index.html
@@ -18,6 +18,8 @@
             animation-name: Chinmay;
             animation-duration: 2s;
             animation-iteration-count: 3;
+            animation-fill-mode: both;
+            animation: Chinmay 5s ease-in 1s 12 backwards;
         }
 
         @keyframes Chinmay {
