--- a/24/index.html
+++ b/24/index.html
@@ -14,6 +14,8 @@
             align-content: center;
             align-items: center;
             transition-property: background-color;
+            transition-timing-function: ease-out;
+            transition-duration: 1s;
         }
 
         #box:hover{
