add transition delay

--- a/24/index.html
+++ b/24/index.html
@@ -16,6 +16,7 @@
             transition-property: background-color;
             transition-timing-function: ease-out;
             transition-duration: 1s;
+            transition-delay: 2s;
         }
 
         #box:hover{
