--- a/24/index.html
+++ b/24/index.html
@@ -22,6 +22,8 @@
         #box:hover{
             background-color: yellow;
             color: white;
+            height: 400px;
+            width: 400px;
         }
     </style>
 </head>
