add transform on hover

--- a/25/index.html
+++ b/25/index.html
@@ -21,7 +21,7 @@
             justify-content: center;
             color: wheat;
             align-items: center;
-            transform: rotate(45deg);
+            
         }
         .container{
             height: 80vh;
@@ -29,6 +29,10 @@
             display: flex;
             justify-content: center;
             align-items: center;
+        }
+
+        .box:hover{
+            transform: rotate(45deg);
         }
     </style>
 </head>
