--- a/26/index.html
+++ b/26/index.html
@@ -15,15 +15,24 @@
         </div>
 
 
-    <ul>
-        <li class="item"><a>Home</a></li>
-        <li class="item"><a>Services</a></li>
-        <li class="item"><a>About Us</a></li>
-        <li class="item"><a>Contact Us</a></li>
-    </ul>
-</nav>
+        <ul>
+            <li class="item"><a>Home</a></li>
+            <li class="item"><a>Services</a></li>
+            <li class="item"><a>About Us</a></li>
+            <li class="item"><a>Contact Us</a></li>
+        </ul>
+    </nav>
 
-
+    <section id="home">
+        <h1 class="h-primary">Welcome to MyOnlineMeal</h1>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Placeat, beatae eligendi corrupti animi cum quasi
+            dolore dolorem eveniet minus sit dolores praesentium fugiat est sapiente illum excepturi aspernatur rem
+            veritatis.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur ipsam itaque facilis ad omnis recusandae?
+            Obcaecati mollitia eos quae eligendi quasi magnam molestias, laboriosam laborum voluptatum commodi? Libero,
+            perferendis officiis!</p>
+        <button class="btn">Order Now</button>
+    </section>
 </body>
 
 </html>
