--- a/26/index.html
+++ b/26/index.html
@@ -36,14 +36,32 @@
 
     <section class="services-container">
         <h1 class="h-primary center">Our Services </h1>
-            <div id="services">
-<div class="box">
-    <img src="./img/1.png" alt="">
-    <h2 class="h-secondary center">Food Ordering</h2>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores fuga omnis, repellat consectetur cupiditate quam facere fugit eligendi expedita at officia voluptatem voluptas, obcaecati eos itaque veniam consequatur reiciendis est.</p>
-</div>
+        <div id="services">
+            <div class="box">
+                <img src="./img/1.png" alt="">
+                <h2 class="h-secondary center">Food Ordering</h2>
+                <p class="center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores fuga omnis, repellat
+                    consectetur cupiditate quam facere fugit eligendi expedita at officia voluptatem voluptas, obcaecati
+                    eos itaque veniam consequatur reiciendis est.</p>
             </div>
-       
+
+            <div class="box">
+                <img src="./img/2.png" alt="">
+                <h2 class="h-secondary center">Food Ordering</h2>
+                <p class="center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores fuga omnis, repellat
+                    consectetur cupiditate quam facere fugit eligendi expedita at officia voluptatem voluptas, obcaecati
+                    eos itaque veniam consequatur reiciendis est.</p>
+            </div>
+
+            <div class="box">
+                <img src="./img/3.png" alt="">
+                <h2 class="h-secondary center">Food Ordering</h2>
+                <p class="center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores fuga omnis, repellat
+                    consectetur cupiditate quam facere fugit eligendi expedita at officia voluptatem voluptas, obcaecati
+                    eos itaque veniam consequatur reiciendis est.</p>
+            </div>
+        </div>
+
     </section>
 </body>
 
