--- a/26/index.html
+++ b/26/index.html
@@ -61,7 +61,13 @@
                     eos itaque veniam consequatur reiciendis est.</p>
             </div>
         </div>
+    </section>
 
+    <section id="client-section">
+        <h1 class="h-primary center">Our Clients</h1>
+        <div class="client-item">
+            <img src="./img/logo1.png" alt="">
+        </div>
     </section>
 </body>
 
