add style to client section

--- a/26/index.html
+++ b/26/index.html
@@ -65,9 +65,24 @@
 
     <section id="client-section">
         <h1 class="h-primary center">Our Clients</h1>
-        <div class="client-item">
-            <img src="./img/logo1.png" alt="">
+        <div id="clients">
+            <div class="client-item">
+                <img src="./img/logo1.png" alt="Our client">
+            </div>
+
+            <div class="client-item">
+                <img src="./img/logo2.png" alt="Our client">
+            </div>
+
+            <div class="client-item">
+                <img src="./img/logo3.png" alt="Our client">
+            </div>
+
+            <div class="client-item">
+                <img src="./img/logo4.png" alt="Our client">
+            </div>
         </div>
+
     </section>
 </body>
 
