--- a/26/index.html
+++ b/26/index.html
@@ -82,7 +82,18 @@
                 <img src="./img/logo4.png" alt="Our client">
             </div>
         </div>
+    </section>
 
+    <section id="contact">
+        <h1 class="h-primary center">Contact Us</h1>
+        <div id="contact-box">
+            <form action="">
+                <div class="form-group">
+                    <label for="name">Name :</label>
+                    <input type="text" name="name" id="name" placeholder="Enter  your name">
+                </div>
+            </form>
+        </div>
     </section>
 </body>
 
