--- a/26/index.html
+++ b/26/index.html
@@ -95,6 +95,12 @@
             </form>
         </div>
     </section>
+
+    <footer>
+        <div class="center">
+            Copyright &copy; www.myOnlineMeal.com. All rights reserved.
+        </div>
+    </footer>
 </body>
 
 </html>
