add more form section

--- a/26/index.html
+++ b/26/index.html
@@ -92,6 +92,22 @@
                     <label for="name">Name :</label>
                     <input type="text" name="name" id="name" placeholder="Enter  your name">
                 </div>
+
+                <div class="form-group">
+                    <label for="name">Email :</label>
+                    <input type="text" name="name" id="name" placeholder="Enter  your name">
+                </div>
+
+
+                <div class="form-group">
+                    <label for="name">Phone No :</label>
+                    <input type="phone" name="Phone No" id="n" placeholder="Enter  your name">
+                </div>
+
+                <div class="form-group">
+                    <label for="name">Message :</label>
+                    <textarea name="message" id="message" placeholder="Enter  your name">
+                </div>
             </form>
         </div>
     </section>
