add style to contact

--- a/26/index.html
+++ b/26/index.html
@@ -106,7 +106,7 @@
 
                 <div class="form-group">
                     <label for="name">Message :</label>
-                    <textarea name="message" id="message" placeholder="Enter  your name">
+                    <textarea name="message" id="message"></textarea>
                 </div>
             </form>
         </div>
