add style to services and navbar

--- a/26/index.html
+++ b/26/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Best Online food delivery services</title>
     <link rel="stylesheet" href="./css/style.css">
+
+    <link rel="stylesheet" media="screen and (max-width:1170px)" href="./css/phone.css">
 </head>
 
 <body>
@@ -95,13 +97,13 @@
 
                 <div class="form-group">
                     <label for="name">Email :</label>
-                    <input type="text" name="name" id="name" placeholder="Enter  your name">
+                    <input type="text" name="name" id="name" placeholder="Enter  your Email">
                 </div>
 
 
                 <div class="form-group">
                     <label for="name">Phone No :</label>
-                    <input type="phone" name="Phone No" id="n" placeholder="Enter  your name">
+                    <input type="phone" name="Phone No" id="n" placeholder="Enter  your phone">
                 </div>
 
                 <div class="form-group">
