--- a/grid.html
+++ b/grid.html
@@ -13,6 +13,8 @@
         .item {
             height: 300px;
             width: 300px;
+            background-color: red;
+            margin: 3px;
         }
     </style>
 </head>
