--- a/grid.html
+++ b/grid.html
@@ -8,11 +8,12 @@
     <style>
         .container {
             display: grid;
+            grid-template-columns: 300px 100px 100px;
         }
 
         .item {
-            height: 300px;
-            width: 300px;
+            height: 100px;
+            width: 100px;
             background-color: red;
             margin: 3px;
         }
