--- a/grid.html
+++ b/grid.html
@@ -16,6 +16,7 @@
             width: 100px;
             background-color: red;
             margin: 3px;
+            border: 2px solid black;
         }
     </style>
 </head>
