--- a/grid.html
+++ b/grid.html
@@ -9,6 +9,8 @@
         .container {
             display: grid;
             grid-template-columns: 300px 100px 100px;
+            grid-template-columns: 1fr 4fr 1fr;
+
         }
 
         .item {
