--- a/grid.html
+++ b/grid.html
@@ -8,14 +8,14 @@
     <style>
         .container {
             display: grid;
-            grid-template-columns: 300px 100px 100px;
+            /* grid-template-columns: 300px 100px 100px; */
             grid-template-columns: 1fr 4fr 1fr;
-
+grid-template-columns: repeat(3,auto);
         }
 
         .item {
-            height: 100px;
-            width: 100px;
+            /* height: 100px;
+            width: 100px; */
             background-color: red;
             margin: 3px;
             border: 2px solid black;
