add grid template columns

--- a/28/grid.html
+++ b/28/grid.html
@@ -8,6 +8,7 @@
         .grid{
             display: grid;
             grid-template-rows: 1fr 1fr 4fr;
+            grid-template-columns: 1fr 4fr;
         }
 
         .box{
