--- a/28/grid.html
+++ b/28/grid.html
@@ -9,6 +9,7 @@
             display: grid;
             grid-template-rows: 1fr 1fr 4fr;
             grid-template-columns: 1fr 4fr;
+            grid-gap: 1rem;
         }
 
         .box{
