--- a/29/grid.html
+++ b/29/grid.html
@@ -19,6 +19,11 @@
             grid-row-gap: 1rem;
             grid-column-gap: 1rem;
         }
+
+        .box:first-child{
+            grid-column-start: 1;
+            grid-column-end: 3;
+        }
     </style>
 </body>
 </html>
