--- a/30/indeex.html
+++ b/30/indeex.html
@@ -1,20 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-.container{
-    display: grid;
+        .container {
+            display: grid;
+            /* grid-template-columns: 112px 112px 112px; */
+            grid-gap: 1rem;
+            grid-template-columns: 1fr 1fr 1fr;
+            grid-template-columns: repeat(autofit, minmax(300px, 1fr));
 
-}
+        }
 
-.box{
-    border: 2px solid black;
-}
+        .box {
+            border: 2px solid black;
+            background-color: rgb(245, 187, 101);
+            padding: 34px;
+        }
     </style>
 </head>
+
 <body>
     <div class="conatiner">
         <div class="box">item 1</div>
@@ -31,4 +39,5 @@
         <div class="box">item 12</div>
     </div>
 </body>
+
 </html>
